<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.auth.RegisterActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Create Your account"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginBottom="10dp"
            tools:ignore="HardcodedText" />
        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/email"
            android:padding="12dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F6F6F6"
            android:drawableStart="@drawable/mail"
            android:drawablePadding="8dp"
            android:drawableTint="#9B9999"
            tools:ignore="HardcodedText,TextFields"
            />
        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/password"
            android:padding="12dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#F6F6F6"
            android:drawableStart="@drawable/lock"
            android:drawableEnd="@drawable/eye_off"
            android:drawablePadding="8dp"
            android:drawableTint="#9B9999"
            tools:ignore="HardcodedText,TextFields"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            >
            <CheckBox
                android:layout_width="48dp"
                android:layout_height="48dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                >

            </TextView>

        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="10dp"

            android:text="@string/sign_up"
            android:textStyle="bold"
            android:backgroundTint="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                />
            <TextView
                android:id="@+id/tvSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:layout_marginStart="2sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>