<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/back_home"
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:src="@drawable/arrow_back"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ContentDescription,MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/fill_your_profile"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/back_home"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/avatar"
        android:layout_width="137dp"
        android:layout_height="137dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        android:src="@drawable/logo"
        android:background="@drawable/circle_frame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"/>

    <LinearLayout
        android:id="@+id/profile_form"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="30dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/edittext_gray"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="125dp" />

        <EditText
            android:id="@+id/nick_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/nickname"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/edittext_gray"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="125dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nick_name">

            <EditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/dateBirth"
                android:importantForAutofill="no"
                android:inputType="date"
                android:padding="12dp"
                android:background="@drawable/edittext_gray"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="125dp" />
        </LinearLayout>

        <EditText
            android:id="@+id/mail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="text"
            android:background="@drawable/edittext_gray"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="125dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/Phone"
            android:importantForAutofill="no"
            android:inputType="phone"
            android:background="@drawable/edittext_gray"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="125dp" />

        <Spinner
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/edittext_gray"/>
    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Continue"
        android:layout_margin="30dp"
        android:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>