<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="ui.home.HomeActivity">
    <!-- Header -->
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            tools:ignore="MissingConstraints">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/circle_bg"
                android:importantForAccessibility="no"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_user"
                app:tint="@color/white" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingStart="8dp"
                tools:ignore="RtlSymmetry">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/good_morning"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/andrew_ainsley"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <!--        <ImageView-->
            <!--            android:src="@drawable/ic_search"-->
            <!--            android:layout_width="24dp"-->
            <!--            android:layout_height="24dp"-->
            <!--            android:padding="8dp"-->
            <!--            tools:ignore="ContentDescription" />-->

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/ic_heart"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="4dp"
                android:src="@drawable/ic_notification"
                app:tint="@color/black"
                tools:ignore="ContentDescription" />
        </LinearLayout>
        <!-- Search -->

        <EditText
            android:id="@+id/etSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="16dp"
            android:background="@drawable/edittext_border"
            android:backgroundTint="#EDEDED"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="8dp"
            android:drawableTint="@color/black"
            android:hint="@string/search"
            android:padding="12dp"
            tools:ignore="Autofill,MissingConstraints,TextFields" />
        <!-- Special Offers Banner -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="5dp"
            app:cardBackgroundColor="@android:color/holo_red_light"
            app:cardCornerRadius="12dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    tools:ignore="RelativeOverlap">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_25"
                        android:textColor="@android:color/white"
                        android:textSize="28sp"
                        android:textStyle="bold"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/today_s_special"
                        android:textColor="@android:color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"

                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/get_discount_for_every_order_only_valid_for_to_day"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        tools:ignore="RelativeOverlap" />
                </LinearLayout>

                <ImageView
                    android:layout_width="127dp"
                    android:layout_height="92dp"
                    android:layout_alignParentEnd="true"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_shoe"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <!-- Brands Filter (Horizontal Scroll) -->
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="8dp">

                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:text="All"
                    tools:ignore="HardcodedText" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/adidas" />

                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/puma" />
                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/nike" />
                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/puma" />
                <Button
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/puma" />
            </LinearLayout>

        </HorizontalScrollView>
        <!-- Product Grid -->
        <!-- RecyclerView chiếm trọn không gian -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerProducts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:clipToPadding="false"
            android:padding="8dp" />


    </LinearLayout>
    <!-- Special Offers Banner -->
    <!-- Bottom NavigationView nằm cuối -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>